[package]
name = "cargo-libafl"
version = "0.1.9"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A `cargo` wrapper to fuzz Rust code with `LibAFL`"
readme = "../README.md"
repository = "https://github.com/AFLplusplus/cargo-libafl"
categories = ["development-tools::testing"]
edition = "2021"
include = [
    "**/*.rs",
    "**/*.toml",
    "Cargo.toml",
    "*.rs"
]
build = "build.rs"

[build-dependencies]
rustc_version = "0.4"
xdg = "2.4"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2", features = ["derive"] }
tempfile = "3.3.0"
toml = "0.5.9"
cargo-binutils = "0.3.6"
rustc_version = "0.4"
xdg = "2.4"

[features]
sancov_8bit = []
tui = []
