# This is a template Cargo.toml that will be post-processed by ../build.rs.

[package]
name = "cargo-libafl-runtime"
# 13.3.7 is a dummy value for templating purposes, it will be replaced with the actual version by ../build.rs
version = "13.3.7"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The runtime lib for cargo-libafl"
repository = "https://github.com/AFLplusplus/cargo-libafl"
edition = "2021"

[workspace]

[dependencies]
libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "8ff8ae41f1ed2956bb1e906c5c7bd0505ca110c0" }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "8ff8ae41f1ed2956bb1e906c5c7bd0505ca110c0", features = ["sancov_8bit", "sancov_pcguard",
"sancov_cmplog", "pointer_maps"] }

mimalloc = { version = "*", default-features = false }
portpicker = "0.1.1"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "*"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[lib]
crate-type = ["staticlib", "rlib"]
path = "runtime.rs"

[features]
sancov_8bit = []
tui = []
