# This is a template Cargo.toml that will be post-processed by ../build.rs.

[package]
name = "cargo-libafl-runtime"
# 13.3.7 is a dummy value for templating purposes, it will be replaced with the actual version by ../build.rs
version = "13.3.7"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "The runtime lib for cargo-libafl"
repository = "https://github.com/AFLplusplus/cargo-libafl"
edition = "2021"

[workspace]

[dependencies]
libafl = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "7ed1ac9" }
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL.git", rev = "7ed1ac9", features = ["sancov_8bit", "sancov_cmplog"] }
mimalloc = { version = "*", default-features = false }
portpicker = "0.1.1"
clap = { version = "~4.2", features = ["derive"] }
nix = { version = "0.26.2" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[lib]
crate-type = ["staticlib", "rlib"]
path = "runtime.rs"
